# bitforge

./: AGENTS.md  README.md  pyproject.toml
bitforge/: __init__.py  cli.py  context.py  kvcache.py  model_loader.py  prune.py  simulator.py
bitforge/compress/: __init__.py  quantize.py
bitforge/esp/: __init__.py  model.py
bitforge/generate/: __init__.py  c_codegen.py
bitforge/targets/: __init__.py  arduino.py  esp32.py  stm32.py
src/tests/: test_quantize.py
tests/: test_esp_model.py  test_prune.py  test_quantize.py
